fix: make the second navbar search visible

--- a/docs-website/src/styles/global.scss
+++ b/docs-website/src/styles/global.scss
@@ -322,10 +322,14 @@ div[class^="announcementBar"] {
   }
 }
 
+/* Hide Searchbar in Nav */
+.navbar__items .DocSearch {
+  display: none;
+}
+
 /* Search */
 
 [data-theme="light"] .DocSearch {
-  display: none;
   /* --docsearch-primary-color: var(--ifm-color-primary); */
   /* --docsearch-text-color: var(--ifm-font-color-base); */
   --docsearch-muted-color: var(--ifm-color-secondary-darkest);
@@ -344,7 +348,6 @@ div[class^="announcementBar"] {
 }
 
 [data-theme="dark"] .DocSearch {
-  display: none;
   --docsearch-text-color: var(--ifm-font-color-base);
   --docsearch-muted-color: var(--ifm-color-secondary-darkest);
   --docsearch-container-background: rgba(71, 71, 71, 0.7);
